# sgx-dl

./: .gitignore  CMakeLists.txt  FindSGXSDK.cmake  README.md
example/: CMakeLists.txt
example/misc/: enclave.config.xml  enclave.edl  enclave_bench.edl
example/src/: add.c  app.cpp  enclave.cpp  lib.rs  loadable.c  loadable.h  patch.c
libpa/: CMakeLists.txt  Makefile
libpa/include/: __debug.h  __enclave.h  dl_patch.h  pa.h  pa_error.h
libpa/include-test/: test_header.h  test_structs.h
libpa/misc/: dl_library.edl  hash.py
libpa/misc-test/: enclave.config.xml  enclave.edl  enclave.lds
libpa/src-t/: aslr.c  dynamic_functions_e.c  dynamic_functions_e.h  elf_parser.c  elf_parser.h  memory_allocator.c  memory_allocator.h  rwlock.c  rwlock.h
libpa/src-test-t/: enclave.cpp  test.c  test2.c  test3.c  test_cases.c  test_cases_abort.c  test_cases_var.c  test_datarel.c  test_header_app.c  test_header_fct.c
libpa/src-test-u/: app.cpp
libpa/src-u/: debug_a.c  elf_parser_a.c  elf_parser_a.h  ocalls.c
scripts/: evalmicro.bash  genwrapper.py  install_psw.sh  install_sdk.sh  load.bash  parse-micro.py  unload.bash
